# photo-atlas

./: CLAUDE.md  MODELS.md  PACKAGING.md  PERFORMANCE.md  README.md  SIGLIP2_MIGRATION.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_scene_embeddings.py
src/photo_atlas/: api.py  classify.py  cli.py  config.py  db.py  demo.py  embed.py  export.py  faces.py  filename_date.py  folder_meta.py  geocode.py  indexer.py  library.py  metadata.py  models.py  planner.py  search.py  video.py
src/photo_atlas/data/: scene_labels.npz
src/photo_atlas/web/: app.js  index.html  styles.css
tests/: conftest.py  scene_stub.py  test_active_learning.py  test_albums.py  test_api_errors.py  test_bulk_export.py  test_cache_freshness.py  test_cli.py  test_dedup.py  test_deep_faces.py  test_embed_unit.py  test_exif.py  test_export.py  test_faces_unit.py  test_favorites.py  test_filename_date.py  test_folder_meta.py  test_grounding.py  test_indexer_more.py  test_kind_facet.py  test_library_unit.py  test_memories.py  test_metadata_cache.py  test_models.py  test_multiselect.py  test_named_face_count.py  test_orientation.py  test_person_ops.py  test_photo_atlas.py  test_planner.py  test_prune_orphans.py  test_recompute_labels.py  test_retag.py  test_scene_only_refactor.py  test_scene_zeroshot.py  test_search_db.py  test_search_unit.py  test_semantic.py  test_similar.py  test_similar_faces.py  (+5 more)
tests/js/: facet_cache_harness.mjs  grid_window_harness.mjs  lightbox_harness.mjs  similar_harness.mjs  url_state_harness.mjs
