[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-atlas"
version = "0.1.0"
description = "Navigate years of photos by person, scene, place and date — with deep-learning face recognition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "numpy>=1.26",
  "pillow>=10.3",
  "scikit-learn>=1.5",
  "opencv-python-headless>=4.10",
  "joblib>=1.4",
  "pydantic>=2.7",
  # SigLIP scene tagging + natural-language semantic search run on ONNX Runtime
  # (no PyTorch). The scene tagger needs only the vision encoder; semantic search
  # additionally embeds a free-text query at runtime via the SigLIP text encoder +
  # its tokenizer. Models download on demand. Core deps (not an extra) because
  # scene tagging is now always SigLIP.
  "onnxruntime>=1.17",
  "tokenizers>=0.19",
]

[project.optional-dependencies]
# High-accuracy alternative face embeddings via dlib.
dlib = ["face-recognition>=1.3"]
# High-resolution offline reverse geocoding (~150k cities).
geo = ["reverse_geocoder>=1.5"]
# Decode HEIC/HEIF (default iPhone format) via the pillow-heif plugin.
heic = ["pillow-heif>=0.16"]

# Development tooling lives in a PEP 735 dependency group so it is installed by
# `uv sync` (which includes the `dev` group by default) but never ships as a
# package extra. Install with plain pip via `pip install -e '.[dev]'` is no
# longer the supported path — use uv (see README).
[dependency-groups]
dev = ["pytest>=8.2", "httpx>=0.27", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
photo-atlas = "photo_atlas.cli:main"

[tool.uv]
# The `dev` group is installed by default; opt into optional features
# explicitly, e.g. `uv sync --extra geo` or `uv sync --extra dlib`
# (dlib needs a C++ toolchain + CMake).
default-groups = ["dev"]

# opencv-python-headless stopped publishing macOS-13 *Intel* (x86_64) wheels at
# 4.13. On that one legacy platform, pin to the last version that still ships a
# wheel so `uv sync` resolves without a source build. Every other platform
# (Apple Silicon, Linux, Windows, newer macOS) keeps the project's >=4.10 floor
# and is free to use 4.13+.
constraint-dependencies = [
  "opencv-python-headless<4.13; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["photo_atlas*"]

[tool.setuptools.package-data]
photo_atlas = [
  "data/*.csv",
  "data/*.npz",
  "web/*",
  "web/vendor/leaflet/*",
  "web/vendor/leaflet/images/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: calling Depends()/Query() in FastAPI parameter defaults is the framework's
# documented idiom, not a bug.
ignore = ["B008"]

[tool.mypy]
files = ["src/photo_atlas"]
python_version = "3.10"
# numpy/cv2/PIL stubs aren't all present; we type our own code, not theirs.
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=photo_atlas --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["photo_atlas"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
